SigmaCodebackup3rdSep/objects/Business_Day_Slot__c.object
<CustomObject>
    <fields>
        <fullName>Business_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Day</label>
        <referenceTo>Business_Day__c</referenceTo>
        <relationshipLabel>Business Day Slots</relationshipLabel>
        <relationshipName>Business_Day_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lunch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Business Day Slot</label>
    <nameField>
        <label>Business Day Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Day Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Either_IsAvailable_or_IsLunch</fullName>
        <active>true</active>
        <description>Either &quot;IsAvailable&quot; or &quot;IsLunch&quot; has to be checked.</description>
        <errorConditionFormula>IF( Is_Available__c &amp;&amp;  Is_Lunch__c , true, false)</errorConditionFormula>
        <errorMessage>You much select either &quot;IsAvailable&quot; or &quot;IsLunch&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_greater_than_End_Time</fullName>
        <active>true</active>
        <description>Start time should be less than End time.</description>
        <errorConditionFormula>End_Time__c &lt;=  Start_Time__c</errorConditionFormula>
        <errorMessage>Start time should be less than the end time.</errorMessage>
    </validationRules>
</CustomObject>